:pencil: fixing doc

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
-  - title: "About"
+  - title: "About Me"
     url: /about/
-  - title: "Academia"
+  - title: "Teaching"
     url: /academia/
   - title: "Posts"
     url: /posts/
