--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About Me"
     url: /about/
-  - title: "Teaching"
-    url: /academia/
+  - title: "Personal Interests"
+    url: /personal/
   - title: "Posts"
     url: /posts/
   - title: "Categories"
