--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "About Me"
     url: /about/
+  - title: "Books"
+    url: /books/
   - title: "Posts"
     url: /posts/
   - title: "Categories"
